# understanding-sam-audio

./: .env.example  .env.webrtc.example  .gitignore  docker-compose.dev.yml  docker-compose.yml  webrtc-docker-compose.dev.yml  webrtc-docker-compose.yml  webrtc-todos.md  webrtc.md
data/: .gitignore
doc/: README.md  architecture.md  deployment.md  how-it-works.md  prompting-guide.md  realtime-webrtc.md  setup-windows.md  webrtc-cloud.md  webrtc.md
nginx/: Dockerfile
sam_audio/: processor.py
sam_audio/model/: base.py  model.py
webrtc-client/: app.js  index.html
webrtc-client/src/components/: AudioVisualizer.js  ControlPanel.js  DownloadButton.js  SttDisplay.js  VideoPreview.js
webrtc-client/src/services/: AudioPlaybackService.js  AudioRecorderService.js  AudioReplayService.js  MediaCaptureService.js  OriginalRecordingService.js  WebSocketService.js
webrtc-client/src/state/: SessionState.js
webrtc-client/src/styles/: main.css
webrtc-nginx/: Dockerfile
webrtc-nginx/conf.d/: default.conf
webrtc-server/: Dockerfile  pyproject.toml
webrtc-server/webrtc_server/: audio_utils.py  cli.py  config.py  main.py  model_registry.py  overlap_buffer.py  stt_service.py  ws_handler.py
