[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "webrtc-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.0.0",
    # torch / torchaudio are installed separately in the Dockerfile
    # to pick the correct CUDA wheel; do not pin them here.
]

[tool.setuptools.packages.find]
where = ["."]
include = ["webrtc_server*"]
